ready for deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,11 @@
         "celerybeat",
         "celeryworker",
         "corsheaders",
+        "csrfmiddlewaretoken",
+        "csrftoken",
+        "favicons",
         "fullhash",
+        "Gunicorn",
         "htmlcov",
         "ifidel",
         "loglevel",
