--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@popperjs/core": "^2.10.2",
+    "@types/jquery": "^3.5.33",
+    "@types/node": "^24.5.2",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^10.0.0",
     "bootstrap": "^5.2.3",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass-tilde-importer": "^1.0.2",
     "pixrem": "^5.0.0",
@@ -45,7 +48,10 @@
   },
   "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706",
   "dependencies": {
+    "axios": "^1.12.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
+    "dotenv": "^17.2.2",
+    "jquery": "^3.7.1",
     "terser-webpack-plugin": "^5.3.14",
     "webpackbar": "^7.0.0"
   }
