--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["DOM", "ESNext"],
     "jsx": "react-jsx",
     "moduleResolution": "node",
+    "ignoreDeprecations": "6.0",
     "allowJs": true,
     "checkJs": false,
     "strict": true,
@@ -13,11 +14,12 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "baseUrl": ".", 
-    "paths": {
-      "@student/*": ["ifidel/static/src/student/*"],
-      "@tutor/*": ["ifidel/static/src/tutor/*"],
-      "@core/*": ["ifidel/static/src/core/*"],
-    }
+"paths": {
+  "@/*": ["ifidel/static/src/*"],
+  "@student/*": ["ifidel/static/src/student/*"],
+  "@tutor/*": ["ifidel/static/src/tutor/*"],
+  "@core/*": ["ifidel/static/src/core/*"]
+}
   },
   "include": ["ifidel/static/src/**/*"],
   "exclude": ["node_modules", "assets", "dist"]
