fixed the tsconfig static path

--- a/.env.sample
+++ b/.env.sample
@@ -52,7 +52,7 @@ CELERY_FLOWER_PASSWORD=debug
 
 USE_DOCKER="yes"
 
-DATABASE_URL=postgresql://postgres:1234@localhost:5433/ifidel
+DATABASE_URL=postgresql://postgres:1234@localhost:5433/postgres
 
 
 OAUTH2_GOOGLE_CLIENT_ID=
