--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,30 @@
 {
-    "cSpell.words": [
-        "allauth",
-        "ANYMAIL",
-        "asgi",
-        "authtoken",
-        "axllent",
-        "celerybeat",
-        "celeryworker",
-        "corsheaders",
-        "csrfmiddlewaretoken",
-        "csrftoken",
-        "favicons",
-        "fullhash",
-        "Gunicorn",
-        "htmlcov",
-        "ifidel",
-        "loglevel",
-        "mailpit",
-        "makemigrations",
-        "nosetests",
-        "pixrem",
-        "pytest",
-        "runserver",
-        "SOCIALACCOUNT",
-        "staticfiles",
-        "webpackbar"
-    ]
+  "cSpell.words": [
+    "allauth",
+    "ANYMAIL",
+    "asgi",
+    "authtoken",
+    "axllent",
+    "celerybeat",
+    "celeryworker",
+    "corsheaders",
+    "csrfmiddlewaretoken",
+    "csrftoken",
+    "DJOSER",
+    "favicons",
+    "fullhash",
+    "Gunicorn",
+    "htmlcov",
+    "ifidel",
+    "loglevel",
+    "mailpit",
+    "makemigrations",
+    "nosetests",
+    "pixrem",
+    "pytest",
+    "runserver",
+    "SOCIALACCOUNT",
+    "staticfiles",
+    "webpackbar"
+  ]
 }
